--- a/TradeHubGui.Common/packages.config
+++ b/TradeHubGui.Common/packages.config
@@ -6,4 +6,5 @@
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net45" />
   <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net45" />
+  <package id="TraceSourceLogger" version="2.2.0.1" targetFramework="net451" />
 </packages>
